Update Machine Learning for Daily life .ipynb

--- a/Machine Learning for Daily life .ipynb
+++ b/Machine Learning for Daily life .ipynb
@@ -407,8 +407,8 @@
     }
    ],
    "source": [
-    "# Give any unknown potato kilogram value,to know the price\n",
-    "#(N.B: the potato kilogram value have to be any value upto 1,for the decent prediction. Since our fitted data potato_kg range is 1 to 7)\n",
+    "# Give any unknown Milk value,to know the price\n",
+    "#(N.B: the milk value have to be any value upto 1,for the decent prediction. Since our fitted data potato_kg range is 1 to 7)\n",
     "reg.predict([[1.1505659]])"
    ]
   },
