--- a/Personalized Electricity Consumption Forecasting.ipynb
+++ b/Personalized Electricity Consumption Forecasting.ipynb
@@ -44,6 +44,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The file I am trying to load doesnt working right now! So, what Can I do?\n",
+    "Lets create a synthetic dataset which resembles to the main datasets. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -1119,10 +1127,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\sajja\\\\Personal.Project\\\\ML'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
   },
   {
    "cell_type": "code",
