--- a/Personalized Electricity Consumption Forecasting.ipynb
+++ b/Personalized Electricity Consumption Forecasting.ipynb
@@ -47,8 +47,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The file I am trying to load doesnt working right now! So, what Can I do?\n",
-    "Lets create a synthetic dataset which resembles to the main datasets. "
+    "## <span style=\"color:red\">The file I am trying to load doesnt working right now! So, what Can I do???\n",
+    "</span>\n",
+    "\n",
+    "<span style=\"color:blue\">Lets create a synthetic dataset which resembles the main dataset..\n",
+    "</span>\n",
+    "\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <span style=\"color:green\">Steps to Create a Synthetic Dataset</span>"
    ]
   },
   {
